fix(dueling-picklist): Resolve scrollbar issue (#3757)

--- a/ui/components/dueling-picklist/base/_index.scss
+++ b/ui/components/dueling-picklist/base/_index.scss
@@ -52,7 +52,7 @@
 
   .slds-dueling-list__options {
     width: auto;
-    max-width: $size-small;
+    max-width: 100%;
   }
 }
 
